added gitpa in meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Hello!</title>
-    <meta name="copyright" content="Copyright 2016-2022.">
+    <meta name="copyright" content="GiPa..">
 
 </head>
 
